--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
      "description": "",
      "main": "index.js",
      "scripts": {
+          "start": "nodemon",
           "start:dev": "nodemon",
           "start:prod": "pnpm build && node dist/index.js",
           "build": "rimraf ./dist && tsc"
